manuka - similar ads added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -320,7 +320,7 @@
     <string name="order_time">Order Time</string>
     <string name="order_id">Order ID</string>
     <string name="order_has_been_delivered">Order has been Delivered</string>
-
+    <string name="similar_ads">Similar ads</string>
 
     <!-- Divya -->
 
