divya - favourite updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,6 +337,8 @@
     <string name="date"> Date </string>
     <string name="time"> Time </string>
     <string name="btn"> Edit </string>
+    <string name="favourites">Favourites</string>
+
 
     <!-- Ravindu -->
 
