--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,6 +399,10 @@
     <string name="ravindu_revokeToReceivedStr">Revoke To Received</string>
     <string name="ravindu_bug_statisticStr">Bug Statistics</string>
     <string name="ravindu_bugStatisticsStr">Bug Statistics</string>
+    <string name="ravindu_bugCountStr">Bug Count</string>
+    <string name="ravindu_acknowledgedBugsStr">Acknowledged Bugs</string>
+    <string name="ravindu_fixedBugsStr">Fixed Bugs</string>
+    <string name="ravindu_pendingBugsStr">Pending Bugs</string>
 
     <!-- Ashan -->
 </resources>
