--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -404,6 +404,10 @@
     <string name="ravindu_fixedBugsStr">Fixed Bugs</string>
     <string name="ravindu_pendingBugsStr">Pending Bugs</string>
     <string name="ravindu_bugIdStr">BugID</string>
+    <string name="default_notification_channel_id">2423232</string>
+    <string name="fcm_message">Ronicy.lk</string>
+    <string name="default_notification_channel_name">ronicy chanel</string>
+    <string name="i_understand">I Understand</string>
 
     <!-- Ashan -->
 </resources>
