manuka - home ads header hide update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!--app -->
     <string name="app_name">Ronicy</string>
@@ -286,18 +286,6 @@
     <string name="this_pie_chart_represent_the_orders_that_were_completed_based_on_the_above_product_also_this_chart_represents_data_based_on_the_prices_of_the_product_and_its_corresponding_sales">This Pie chart represent the orders that were completed based on the above product also this chart represents data based on the prices of the product and its corresponding sales.</string>
     <string name="this_line_chart_represent_the_orders_that_were_completed_based_on_the_above_product_also_this_chart_represents_data_based_on_the_prices_of_the_product_and_its_corresponding_sales">This Line chart represent the orders that were completed based on the above product also this chart represents data based on the prices of the product and its corresponding sales.</string>
 
-    <!-- navigation overridden -->
-    <dimen name="badge_left_margin" tools:override="true">@dimen/_4sdp</dimen>
-    <dimen name="centre_content_width" tools:override="true">@dimen/_80sdp</dimen>
-    <dimen name="main_content_height" tools:override="true">@dimen/_46sdp</dimen>
-    <dimen name="space_centre_button_default_size" tools:override="true">@dimen/_56sdp</dimen>
-    <dimen name="space_centre_button_margin" tools:override="true">@dimen/_6sdp</dimen>
-    <dimen name="space_item_icon_default_size" tools:override="true">@dimen/_18sdp</dimen>
-    <dimen name="space_item_icon_only_size" tools:override="true">@dimen/_22sdp</dimen>
-    <dimen name="space_item_text_default_size" tools:override="true">@dimen/_14sdp</dimen>
-    <dimen name="space_navigation_height" tools:override="true">@dimen/_66sdp</dimen>
-    <dimen name="view_bottom_margin" tools:override="true">@dimen/_40sdp</dimen>
-
     <!-- orders admin charts -->
     <string name="trash_ads">Note: These advertisements are deleted by users/administrators and are not available anymore.</string>
     <string name="cancelled_past_orders">Note: These orders have been cancelled therefore please consider before updating an Order.</string>
@@ -321,6 +309,11 @@
     <string name="order_id">Order ID</string>
     <string name="order_has_been_delivered">Order has been Delivered</string>
     <string name="similar_ads">Similar ads</string>
+
+    <string name="default_notification_channel_id">2423232</string>
+    <string name="fcm_message">Ronicy.lk</string>
+    <string name="default_notification_channel_name">ronicy chanel</string>
+    <string name="i_understand">I Understand</string>
 
     <!-- Divya -->
 
@@ -404,10 +397,6 @@
     <string name="ravindu_fixedBugsStr">Fixed Bugs</string>
     <string name="ravindu_pendingBugsStr">Pending Bugs</string>
     <string name="ravindu_bugIdStr">BugID</string>
-    <string name="default_notification_channel_id">2423232</string>
-    <string name="fcm_message">Ronicy.lk</string>
-    <string name="default_notification_channel_name">ronicy chanel</string>
-    <string name="i_understand">I Understand</string>
 
     <!-- Ashan -->
 </resources>
