--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -397,6 +397,8 @@
     <string name="ravindu_fixedBugsStr">Fixed Bugs</string>
     <string name="ravindu_pendingBugsStr">Pending Bugs</string>
     <string name="ravindu_bugIdStr">BugID</string>
+    <string name="buy_now">Buy Now</string>
+    <string name="top_ad">TOP AD</string>
 
     <!-- Ashan -->
 </resources>
